# RealtimeFundDashboard

./: .gitignore  README.md  pyproject.toml  report_log  requirements.txt  run.sh  setup.sh
.claude/: settings.local.json
config/: config.example.json  holdings.yaml
src/fund_advisor/: __init__.py  __main__.py  cli.py
src/fund_advisor/advisor/: __init__.py  advisor.py  llm_client.py  prompt.py
src/fund_advisor/analysis/: __init__.py  decision.py  policy.py  sentiment.py  technical.py
src/fund_advisor/data/: __init__.py  cache.py  db.py  etf_premium.py  fund.py  fund_holding.py  market.py  news.py  valuation.py
src/fund_advisor/report/: __init__.py  console.py  html_report.py
src/fund_advisor/server/: __init__.py  app.py  chat.py  scheduler.py  state.py
src/fund_advisor/server/static/: app.css  app.js
src/fund_advisor/server/templates/: dashboard.html
src/fund_advisor/utils/: __init__.py  config.py  estimate_bias.py  history.py  logger.py
