[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-advisor"
version = "0.1.0"
description = "A股基金买卖分析助手"
requires-python = ">=3.9"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "snownlp>=0.12.3",
]

[project.scripts]
fund-advisor = "fund_advisor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
